Fixed shadows and add icon of dark mode button

--- a/11-09-24/12-09-2024/styles.css
+++ b/11-09-24/12-09-2024/styles.css
@@ -13,7 +13,8 @@ body {
     width: 250px;
     height: 250px;
    
-    box-shadow: inset 7px 10px 20px rgba(38, 40, 39, 0.219);
+    box-shadow: inset 5px 3px 12px rgba(38, 40, 39, 0.219),
+    5px 3px 12px rgba(38, 40, 39, 0.219);
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -27,7 +28,7 @@ body {
     width: fit-content;
     height: fit-content;
     border-radius: 50%;
-    box-shadow:  7px 10px 20px rgba(113, 130, 124, 0.219);
+  
 }
 
 .nums {
@@ -53,7 +54,7 @@ body {
 .t-9 {
     position: absolute;
     left: 10px;
-    top: 50%;
+    top: 46%;
     margin-left: 10px;
     transform: translateY(-50%);
     transform: rotate(90deg);
@@ -63,7 +64,7 @@ body {
 .t-3 {
     position: absolute;
     right: 10px;
-    top: 50%;
+    top: 46%;
     margin-right: 10px;
     transform: translateY(-50%);
     transform: rotate(90deg);
@@ -74,7 +75,7 @@ body {
     height: 100px;
     background-color: rgb(54, 250, 175);
     position: absolute;
-    top: 40px;
+    top: 44px;
     left: 50%;
     transform-origin: bottom;
     transform: rotate(0deg); 
@@ -86,8 +87,8 @@ body {
     height: 80px;
     background-color: var(--hands);
     position: absolute;
-    top: 60px;
-    left: 49%;
+    top: 64px;
+    left: 50%;
     transform-origin: bottom;
     transform: rotate(20deg); 
 }
@@ -105,7 +106,7 @@ body {
 
 .center {
     border-radius: 50%;
-    border: 2px solid white;
+    border: 2px solid var(--main-bg);
     width: 12px;
     height: 12px;
     background-color: rgb(54, 250, 175);
@@ -120,7 +121,7 @@ body {
     color: var(--font-c);
     margin-top: 20px;
     font-family: sans-serif;
-    font-size: 72px;
+    font-size: 98px;
     font-weight: 700;
     display: flex;
 }
@@ -145,11 +146,11 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin: 90px; 
 }
 
 #digit-parent {
-
-    margin-top: 20px;
+    margin-top: 50px;
     display: flex;
 }
 
@@ -164,13 +165,17 @@ body {
 
 #btn {
     font-weight: 700;
+    font-size: 24px;
     border-radius: 50%;
-    color: var(--font-c);
+    color: rgb(54,250,175);
     border: 2px white ;
-    box-shadow: inset 7px 10px 20px rgba(38, 40, 39, 0.219);
+    box-shadow: inset 5px 3px 12px rgba(38, 40, 39, 0.219),
+     5px 3px 12px rgba(38, 40, 39, 0.219);
     background-color: var(--main-bg);
     margin-left:20px;
     height: 50px;
     width: 50px;
+    position: relative;
+    bottom: 20px;
 }
 
